# Remote-Chat

./: .gitignore  CMakeLists.txt  README.md  build_and_run_server.sh  kill_server.sh  main.cpp  perform_build.sh  run_server_in_background.sh  vcpkg.json
client/: CMakeLists.txt  client.cpp
net/: CMakeLists.txt  net_client.h  net_common.h  net_connection.h  net_message.h  net_server.h  net_tsqueue.h  olc_net.h
server/: CMakeLists.txt  server.cpp
